# ParaviewTutorial

./: README.md  buildingParaview.md
Plugin/: Plugin.md
Plugin/BinReader/: BinReader.md  CMakeLists.txt  README.md
Plugin/BinReader/Plugin/: BinReader.cxx  BinReader.h  CMakeLists.txt  paraview.plugin
Plugin/BinReader/Plugin/vtkBinReader/: CMakeLists.txt  readers.xml  vtk.module  vtkBinReader.cxx  vtkBinReader.h
Plugin/MyPNGReader/: MyPNG.md
Plugin/MyPNGReader/Plugin/: CMakeLists.txt
polyvtk/: CMakeLists.txt  binary.vtk
vtk/: vtk.md
vtk/point/: point.md  point.py
vtk/polyvtk/: main.cpp
